Add microservices architecture with JWT authentication, multi-tenancy support, and Docker deployment